# coding-challenges

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.workflow.yml
challenges/file_processing_takehome/: simulation.py
challenges/water_bottle_takehome/: evaluate.py  make_predictions.py  preprocess.py
challenges/water_bottle_takehome/candidate_code/: Makefile  README.md  R_water_bottle_challenge.ipynb  WaterBottleExp.ipynb  evaluation_results.txt  explore.py  make_null_dataset.py  output.csv  pyproject.toml  requirements.txt  test.py  water_bottle_challenge.py  water_bottle_challenge_exploration.ipynb  water_bottle_eda.html  water_bottle_eda.ipynb
challenges/water_bottle_takehome/candidate_code/models/: knn_classifier.pkl
challenges/water_bottle_takehome/candidate_code/notebooks/: data_exploration.ipynb  test_classifier.ipynb
challenges/water_bottle_takehome/candidate_code/tests/: test_data.py
challenges/water_bottle_takehome/candidate_code/train/: unlabeled_10.csv  unlabeled_15.csv  unlabeled_22.csv  unlabeled_23.csv  unlabeled_25.csv  unlabeled_26.csv  unlabeled_27.csv  unlabeled_38.csv  unlabeled_42.csv  unlabeled_45.csv  unlabeled_85.csv  unlabeled_86.csv  unlabeled_88.csv  unlabeled_95.csv
challenges/water_bottle_takehome/candidate_code/water_bottle_challenge/: config.py  preprocessing.py  train_knn_classifier.py  water_bottle_challenge.py
challenges/water_bottle_takehome/data/: preprocessed_map.json  raw_map.json
(+12 files in other folders)
