[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "water_bottle_challenge"
version = "0.0.1"
description = "A simple classifier for whether a preprocessed audio file is of a knife hitting the top or bottom oof a water bottle"
authors = [
  { name = "David Hackett" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["water_bottle_challenge"]
include = ["pyproject.toml", "water_bottle_challenge/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["water_bottle_challenge"]
force-sort-within-sections = true

